--- a/src/assets/views/widget/widget-image.html
+++ b/src/assets/views/widget/widget-image.html
@@ -24,7 +24,7 @@
             </a>
         </div>
         <a class="navbar-brand cl-text-white cl-text-bold" href="#">
-            Widgets Edit
+            Widget Edit
         </a>
     </div>
 </nav>
