--- a/src/assets/views/widget/widget-youtube.html
+++ b/src/assets/views/widget/widget-youtube.html
@@ -26,7 +26,7 @@
             </a>
         </div>
         <a class="navbar-brand cl-text-white cl-text-bold" href="#">
-            Widgets Edit
+            Widget Edit
         </a>
     </div>
 </nav>
