A comment describing your work

--- a/src/assets/views/website/website-edit.html
+++ b/src/assets/views/website/website-edit.html
@@ -17,15 +17,15 @@
                         <span class="glyphicon glyphicon-chevron-left"></span>
                     </a>
                 </p>
-                <a class="cl-text-white navbar-brand cl-text-bold" href="#">
+                <a class="cl-text-white navbar-brand cl-text-bold cl-icon-padding" href="#">
                     Websites
                 </a>
-                <a href="website-new.html" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+                <a href="website-new.html" class="navbar-link navbar-text pull-right cl-text-white">
                     <span class="glyphicon glyphicon-plus"></span>
                 </a>
             </div>
         </div>
-        <div class="col-xs-8">
+        <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
             <div class="container-fluid">
                 <a class="cl-text-white navbar-brand cl-text-bold" href="#">
                     Edit Websites
@@ -59,7 +59,7 @@
             </li>
         </ul>
     </div>
-    <div class="col-xs-8 borders">
+    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 borders">
         <form>
             <div class="form-group cl-8-top">
                 <label for="website-name">Website Name</label>
