--- a/src/assets/views/widget/widget-list.html
+++ b/src/assets/views/widget/widget-list.html
@@ -39,7 +39,7 @@
                 <span class="glyphicon glyphicon-cog cl-widget-toolbar-cog"></span>
             </a>
         </div>
-        <h1>London terror attack: Police fired 'unprecedented' number of rounds</h1>
+        <h1>Grammys 2018: Lana Del Rey and Lady Gaga lead best dressed on the star-studded red carpet</h1>
     </div>
 
     <div>
@@ -51,7 +51,7 @@
                 <span class="glyphicon glyphicon-cog cl-widget-toolbar-cog"></span>
             </a>
         </div>
-        <h3>Counterterrorism officers patrol near the scene of the attack on London Bridge.</h3>
+        <h3>The 60th Annual Grammy Awards took place at Madison Square Garden in New York on Sunday night.</h3>
     </div>
 
     <div>
@@ -63,7 +63,7 @@
                 <span class="glyphicon glyphicon-cog cl-widget-toolbar-cog"></span>
             </a>
             <img class="img-responsive img-rounded cl-widget-images"
-                 src="http://i2.cdn.cnn.com/cnnnext/dam/assets/170604130220-41-london-bridge-incident-0604-gallery-exlarge-169.jpg">
+                 src="https://www.standard.co.uk/s3fs-public/styles/hero_tablet/public/thumbnails/image/2018/01/28/23/grammy5.jpg">
         </div>
     </div>
     <div>
@@ -75,7 +75,8 @@
                 <span class="glyphicon glyphicon-cog cl-widget-toolbar-cog"></span>
             </a>
         </div>
-        <p>Armed officers responding to the London Bridge terror attack fired an "unprecedented" number of rounds at the three attackers because they were wearing what appeared to be suicide belts, police said.
+        <p>
+          Although the ceremony had ditched its LA home in favour of New York, the cooler climate did nothing to deter stars from making the very best sartorial statements on the red carpet.
         </p>
     </div>
 
@@ -88,13 +89,12 @@
                 <span class="glyphicon glyphicon-cog cl-widget-toolbar-cog"></span>
             </a>
         </div>
-        <h3>Report: Incident at London Bridge</h3>
+        <h3>Video: Grammy Moments</h3>
     </div>
 
     <div>
         <div class="embed-responsive embed-responsive-16by9">
-            <iframe width="640" height="360" src="https://www.youtube.com/embed/APexI9Zb6iE" frameborder="0" allowfullscreen></iframe>"
-            allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/tTMtafubPq0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             <a href="#" class="pull-right">
                 <span class="glyphicon glyphicon-menu-hamburger cl-widget-toolbar-hamburger"></span>
             </a>
@@ -113,7 +113,7 @@
                 <span class="glyphicon glyphicon-cog cl-widget-toolbar-cog"></span>
             </a>
         </div>
-        <p>There is a report of an incident has occurred at London Bridge. From CNN London.</p>
+        <p>There is a video of the most exciting grammy moments</p>
     </div>
 
 </div>
