--- a/src/assets/views/user/profile.html
+++ b/src/assets/views/user/profile.html
@@ -13,6 +13,9 @@
       <a class="cl-text-white navbar-brand cl-text-bold cl-font-size" href="#">
         Profile
       </a>
+      <a href="profile.html" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+        <span class="glyphicon glyphicon-ok"></span>
+      </a>
     </div>
 </nav>
 
