--- a/src/assets/views/website/website-list.html
+++ b/src/assets/views/website/website-list.html
@@ -24,7 +24,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container-fluid">
         <ul class="list-group cl-list-group-borderless">
             <li class="list-group-item cl-list-item-borderless">
                 <a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a>
