--- a/src/assets/views/widget/widget-heading.html
+++ b/src/assets/views/widget/widget-heading.html
@@ -30,7 +30,7 @@
     </div>
 </nav>
 
-<div class="container">
+<div class="container-fluid">
     <form>
         <div class="form-group">
             <label for="heading-name">Name</label>
@@ -42,7 +42,7 @@
         </div>
         <div class="form-group">
             <label for="heading-size">Size</label>
-            <input type="text" class="form-control" id="heading-size" placeholder="3">
+            <input type="text" class="form-control" id="heading-size" value="3">
         </div>
     </form>
     <a class="btn btn-danger  btn-block" href="widget-list.html">Delete</a>
