--- a/src/assets/views/widget/widget-image.html
+++ b/src/assets/views/widget/widget-image.html
@@ -29,7 +29,7 @@
     </div>
 </nav>
 
-<div class="container">
+<div class="container-fluid">
     <form>
         <div class="form-group">
             <label for="image-name">Name</label>
@@ -45,7 +45,7 @@
         </div>
         <div class="form-group">
             <label for="image-width">Width</label>
-            <input type="text" class="form-control" id="image-width" placeholder="100%">
+            <input type="text" class="form-control" id="image-width" value="100%">
         </div>
         <div class="form-group">
             <label for="exampleInputFile">Upload</label>
