--- a/src/assets/views/widget/widget-youtube.html
+++ b/src/assets/views/widget/widget-youtube.html
@@ -31,7 +31,7 @@
     </div>
 </nav>
 
-<div class="container">
+<div class="container-fluid">
     <form>
         <div class="form-group">
             <label for="youtube-name">Name</label>
@@ -47,7 +47,7 @@
         </div>
         <div class="form-group">
             <label for="youtube-width">Width</label>
-            <input type="text" class="form-control" id="youtube-width" placeholder="100%">
+            <input type="text" class="form-control" id="youtube-width" value="100%">
         </div>
     </form>
     <a class="btn btn-danger btn-block" href="widget-list.html">Delete</a>
