--- a/src/app/views/page/page-edit/page-edit.component.html
+++ b/src/app/views/page/page-edit/page-edit.component.html
@@ -1,40 +1,45 @@
+
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid row">
 
     <div class="navbar-text pull-left">
-      <a routerLink="/user/{{userId}}/website" class="cl-text-black cl-icon-padding">
+      <a routerLink="/user/{{userId}}/website/{{websiteId}}/page" class="cl-text-black cl-icon-padding">
           <span class="glyphicon glyphicon-chevron-left">
           </span>
       </a>
     </div>
     <div class="navbar-text pull-right">
-      <a routerLink="/user/{{userId}}/website/{{websiteId}}/page/new" class="cl-icon-padding cl-text-black">
-          <span class="glyphicon glyphicon-plus">
+      <a (click)="updatePage(updatedPage)" class="cl-icon-padding cl-text-black">
+          <span class="glyphicon glyphicon-ok">
           </span>
       </a>
     </div>
-    <a class="navbar-brand cl-text-white cl-text-bold" routerLink="/user/{{userId}}/website/{{websiteId}}/page">
-      Pages
+    <a class="navbar-brand cl-text-white cl-text-bold"
+       routerLink="/user/{{userId}}/website/{{websiteId}}/page/{{pageId}}">Edit Page
     </a>
   </div>
 </nav>
 
-
-<div class="container-fluid cl-container-padding">
-  <ul class="list-group cl-list-group-borderless">
-    <li class="list-group-item cl-list-item-borderless" *ngFor="let page of pages">
-      <a routerLink="/user/{{userId}}/website/{{websiteId}}/page/{{page._id}}/widget">{{page.name}}</a>
-      <a routerLink="/user/{{userId}}/website/{{websiteId}}/page/{{page._id}}">
-        <span class="glyphicon glyphicon-cog pull-right"></span>
-      </a>
-    </li>
-  </ul>
+<div class="container">
+  <form>
+    <div class="form-group">
+      <label for="page-name">Name</label>
+      <input [(ngModel)]="updatedPage.name" type="text" class="form-control" id="page-name" placeholder="Page Name"
+             [ngModelOptions]="{standalone: true}">
+    </div>
+    <div class="form-group">
+      <label for="page-title">Title</label>
+      <input [(ngModel)]="updatedPage.title" type="text" class="form-control" id="page-title" placeholder="Page Title"
+             [ngModelOptions]="{standalone: true}">
+    </div>
+  </form>
+  <a class="btn btn-danger  btn-block" (click)="deletePage()">Delete</a>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid row">
     <div class="pull-right navbar-text">
-      <a routerLink="/user/{{userId}}" class="cl-icon-padding">
+      <a href="/user/{{userId}}" class="cl-icon-padding">
         <span class="glyphicon glyphicon-user"></span>
       </a>
     </div>
