--- a/src/app/views/website/website-new/website-new.component.html
+++ b/src/app/views/website/website-new/website-new.component.html
@@ -49,7 +49,7 @@
       <div class="form-group cl-8-top">
         <label for="website-name">Name</label>
         <input [(ngModel)]="newWebsite.name" type="text" class="form-control" id="website-name" placeholder="Name"
-               ngModel required [ngModelOptions]="{standalone: true}">
+               [ngModelOptions]="{standalone: true}">
       </div>
       <div class="form-group cl-8-top">
         <label for="website-description">Description</label>
