--- a/src/app/views/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/views/widget/widget-edit/widget-image/widget-image.component.html
@@ -110,7 +110,7 @@
     </div>
   </form>
   <button class="btn btn-primary btn-block" type="submit" [disabled]="!f.valid">Upload Image</button>
-  <button class="btn btn-danger btn-block" (click)="deleteWidget()" [disabled]="!f.valid">Delete</button>
+  <button class="btn btn-danger btn-block" (click)="deleteWidget()">Delete</button>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
