--- a/src/app/views/user/login/login.component.html
+++ b/src/app/views/user/login/login.component.html
@@ -26,5 +26,9 @@
     <div class="form-group">
       <a routerLink="/register" class="btn btn-success btn-block">Register</a>
     </div>
+
+    <!--{{f.valid}}-->
+    <!--<div>  this line means except for disabled, the form is always valid.-->
+    <!--</div>>-->
   </form>
 </div>
