--- a/src/app/views/widget/widget-chooser/widget-chooser.component.html
+++ b/src/app/views/widget/widget-chooser/widget-chooser.component.html
@@ -17,16 +17,16 @@
 <div class="container-fluid cl-container-padding">
   <ul class="list-group cl-list-group-borderless">
     <li class="list-group-item cl-list-item-borderless">
-      <a (click)="createWidget('HEADER')">Header</a>
+      <a class="btn" (click)="createWidget('HEADER')">Header</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
       <a routerLink="/#">Label</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
-      <a routerLink="/#">HTML</a>
+      <a class="btn" (click)="createWidget('HTML')">HTML</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
-      <a routerLink="/#">Text Input</a>
+      <a class="btn" (click)="createWidget('TEXT')">Text Input</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
       <a routerLink="/#">Link</a>
@@ -35,10 +35,10 @@
       <a routerLink="/#">Button</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
-      <a (click)="createWidget('IMAGE')">Image</a>
+      <a class="btn" (click)="createWidget('IMAGE')">Image</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
-      <a (click)="createWidget('YOUTUBE')">YouTube</a>
+      <a class="btn" (click)="createWidget('YOUTUBE')">YouTube</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
       <a routerLink="/#">Data Table</a>
