--- a/src/app/views/user/register/register.component.html
+++ b/src/app/views/user/register/register.component.html
@@ -3,30 +3,43 @@
     {{errorMsg}}
   </div>
   <h1>Register</h1>
-  <form (ngSubmit)="register()" #f="ngForm">
+  <form (ngSubmit)="register(username, password, verifyPassword)" #f="ngForm">
 
     <div class="form-group">
-      <input type="text" name="username" placeholder="username" class="form-control" ngModel required #username="ngModel">
+      <!--<input type="text" name="username" placeholder="username" class="form-control" ngModel required #username="ngModel">-->
+      <input [(ngModel)]="username" type="text" name="username" placeholder="username" class="form-control"
+             [ngModelOptions]="{standalone: true}">
     </div>
-    <span class="help-block" *ngIf="!username.valid && username.touched">
-      Please enter username!
-    </span>
+    <!--<span class="help-block" *ngIf="!username.valid && username.touched">-->
+      <!--Please enter username!-->
+    <!--</span>-->
 
     <div class="form-group">
-      <input type="password" name="password" placeholder="password" class="form-control" ngModel required #password="ngModel">
+      <!--<input type="password" name="password" placeholder="password" class="form-control" ngModel required #password="ngModel">-->
+      <input [(ngModel)]="password" type="password" name="password" placeholder="password" class="form-control"
+             [ngModelOptions]="{standalone: true}">
     </div>
     <div class="form-group">
-      <input type="password" name="verifyPassword" placeholder="verify password" class="form-control" ngModel required #verifyPassword="ngModel">
+      <!--<input type="password" name="verifyPassword" placeholder="verify password" class="form-control" ngModel required #verifyPassword="ngModel">-->
+      <input [(ngModel)]="verifyPassword" type="password" name="verifyPassword" placeholder="verify password" class="form-control"
+             [ngModelOptions]="{standalone: true}">
     </div>
     <div class="form-group">
-      <input type="text" name="firstName" placeholder="First Name" class="form-control" ngModel required #verifyPassword="ngModel">
+      <input [(ngModel)]="firstName" type="text" name="firstName" placeholder="First Name" class="form-control"
+             [ngModelOptions]="{standalone: true}">
+      <!--<input type="text" name="firstName" placeholder="First Name" class="form-control" ngModel required #verifyPassword="ngModel">-->
     </div>
     <div class="form-group">
-      <input type="text" name="lastName" placeholder="Last Name" class="form-control" ngModel required #verifyPassword="ngModel">
+      <input [(ngModel)]="lastName" type="text" name="lastName" placeholder="Last Name" class="form-control"
+             [ngModelOptions]="{standalone: true}">
+      <!--<input type="text" name="lastName" placeholder="Last Name" class="form-control" ngModel required #verifyPassword="ngModel">-->
     </div>
 
+    <!--<div class="form-group">-->
+      <!--<button [disabled]="!f.valid" class="btn btn-primary btn-block">Register</button>-->
+    <!--</div>-->
     <div class="form-group">
-      <button [disabled]="!f.valid" class="btn btn-primary btn-block">Register</button>
+      <button class="btn btn-primary btn-block">Register</button>
     </div>
     <div class="form-group">
       <a routerLink="/login" class="btn btn-danger btn-block">Cancel</a>
