--- a/src/app/views/widget/widget-edit/widget-header/widget-header.component.html
+++ b/src/app/views/widget/widget-edit/widget-header/widget-header.component.html
@@ -23,7 +23,8 @@
   <form>
     <div class="form-group">
       <label for="heading-name">Name</label>
-      <input type="text" class="form-control" id="heading-name" placeholder="Name">
+      <input [(ngModel)]="widget.name" type="text" class="form-control" id="heading-name" placeholder="Name"
+             [ngModelOptions]="{standalone: true}">
     </div>
     <div class="form-group">
       <label for="heading-text">Text</label>
