--- a/src/app/views/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/views/widget/widget-edit/widget-image/widget-image.component.html
@@ -36,15 +36,26 @@
     <!--</div>-->
     <!--<div class="form-group">-->
       <!--<label for="image-width">Width</label>-->
-      <!--<input [(ngModel)]="widget.width" type="text" class="form-control" id="image-width" value="100%"-->
+      <!--<input [(ngModel)]="widget.width" type="text" class="form-control" id="image-width" placeholder="100%"-->
              <!--[ngModelOptions]="{standalone: true}">-->
     <!--</div>-->
-    <!--<div class="form-group">-->
-      <!--<label for="exampleInputFile">Upload</label>-->
-      <!--<input type="file" class="form-control" id="exampleInputFile">-->
-    <!--</div>-->
+
+    <!--<form ngNoForm action="{{baseUrl}}/api/upload" method="post" enctype="multipart/form-data">-->
+      <!--<input name="myFile" type="file" class="form-control" />-->
+      <!--<input name="widgetId" value="{{widgetId}}" style="display: none" />-->
+      <!--<input name="websiteId" value="{{websiteId}}" style="display: none" />-->
+      <!--<input name="pageId" value="{{pageId}}" style="display: none" />-->
+      <!--<input name="userId" value="{{userId}}" style="display: none" />-->
+      <!--<button type="submit" class="btn btn-block btn-primary">Upload</button>-->
+      <!--<br/>-->
+    <!--</form>-->
+    <!--&lt;!&ndash;&ndash;&gt;-->
+    <!--&lt;!&ndash;<div class="form-group">&ndash;&gt;-->
+      <!--&lt;!&ndash;<label for="exampleInputFile">Upload</label>&ndash;&gt;-->
+      <!--&lt;!&ndash;<input type="file" class="form-control" id="exampleInputFile">&ndash;&gt;-->
+    <!--&lt;!&ndash;</div>&ndash;&gt;-->
   <!--</form>-->
-  <!--<a class="btn btn-primary btn-block" routerLink="/#">Upload Image</a>-->
+  <!--&lt;!&ndash;<a class="btn btn-primary btn-block" routerLink="/#">Upload Image</a>&ndash;&gt;-->
   <!--<a class="btn btn-danger  btn-block" (click)="deleteWidget()">Delete</a>-->
 <!--</div>-->
 
@@ -61,66 +72,139 @@
 <!--</nav>-->
 
 
+<!--<nav class="navbar navbar-default navbar-fixed-top">-->
+  <!--<div class="container-fluid row">-->
+
+    <!--<div class="navbar-text pull-left">-->
+      <!--<a routerLink="/user/{{userId}}/website/{{websiteId}}/page/{{pageId}}/widget" class="cl-text-black cl-icon-padding">-->
+          <!--<span class="glyphicon glyphicon-chevron-left">-->
+          <!--</span>-->
+      <!--</a>-->
+    <!--</div>-->
+    <!--<div class="navbar-text pull-right">-->
+      <!--<a (click)="updateWidget(widget)" class="cl-icon-padding cl-text-black">-->
+          <!--<span class="glyphicon glyphicon-ok">-->
+          <!--</span>-->
+      <!--</a>-->
+    <!--</div>-->
+    <!--<a class="navbar-brand cl-text-white cl-text-bold" routerLink="/#">-->
+      <!--Widget Edit-->
+    <!--</a>-->
+  <!--</div>-->
+<!--</nav>-->
+
+<!--<div class="container-fluid">-->
+  <!--<form (ngSubmit)="upload()" #f="ngForm">-->
+    <!--<div class="form-group">-->
+      <!--<label for="image-name">Name</label>-->
+      <!--<input type="text" class="form-control" id="image-name" placeholder="Name"-->
+             <!--ngModel required name="name" #name="ngModel">-->
+    <!--</div>-->
+    <!--<div class="form-group">-->
+      <!--<label for="image-text">Text</label>-->
+      <!--<input type="text" class="form-control" id="image-text" placeholder="Text"-->
+             <!--ngModel required name="text" #text="ngModel">-->
+    <!--</div>-->
+    <!--<div class="form-group">-->
+      <!--<label for="image-URL">URL</label>-->
+      <!--<input type="text" class="form-control" id="image-URL" placeholder="URL"-->
+             <!--ngModel required name="url" #url="ngModel">-->
+    <!--</div>-->
+    <!--<div class="form-group">-->
+      <!--<label for="image-width">Width</label>-->
+      <!--<input type="text" class="form-control" id="image-width" value="100%"-->
+             <!--ngModel required name="width" #width="ngModel">-->
+    <!--</div>-->
+    <!--<div class="form-group">-->
+      <!--<label for="exampleInputFile">Upload</label>-->
+      <!--<input type="file" class="form-control" id="exampleInputFile">-->
+    <!--</div>-->
+  <!--</form>-->
+  <!--<button class="btn btn-primary btn-block" type="submit" [disabled]="!f.valid">Upload Image</button>-->
+  <!--<button class="btn btn-danger btn-block" (click)="deleteWidget()">Delete</button>-->
+<!--</div>-->
+
+<!--<nav class="navbar navbar-default navbar-fixed-bottom">-->
+  <!--<div class="container-fluid row">-->
+    <!--<div class="pull-right navbar-text">-->
+
+      <!--<a routerLink="/user/{{userId}}" class="cl-icon-padding">-->
+        <!--<span class="glyphicon glyphicon-user"></span>-->
+      <!--</a>-->
+
+    <!--</div>-->
+  <!--</div>-->
+<!--</nav>-->
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid row">
 
     <div class="navbar-text pull-left">
-      <a routerLink="/user/{{userId}}/website/{{websiteId}}/page/{{pageId}}/widget" class="cl-text-black cl-icon-padding">
+      <a routerLink=".." class="cl-text-black cl-icon-padding">
           <span class="glyphicon glyphicon-chevron-left">
           </span>
       </a>
     </div>
     <div class="navbar-text pull-right">
-      <a (click)="updateWidget(widget)" class="cl-icon-padding cl-text-black">
+      <a routerLink=".." class="cl-icon-padding cl-text-black">
           <span class="glyphicon glyphicon-ok">
           </span>
       </a>
     </div>
-    <a class="navbar-brand cl-text-white cl-text-bold" routerLink="/#">
-      Widget Edit
+    <a class="navbar-brand cl-text-white cl-text-bold">
+      Image Edit
     </a>
   </div>
 </nav>
 
-<div class="container-fluid">
+<div class="container">
   <form (ngSubmit)="upload()" #f="ngForm">
-    <div class="form-group">
-      <label for="image-name">Name</label>
-      <input type="text" class="form-control" id="image-name" placeholder="Name"
-             ngModel required name="name" #name="ngModel">
-    </div>
+    <!--<div class="form-group">-->
+    <!--<label for="image-name">Name</label>-->
+    <!--<input type="text" class="form-control" id="image-name" placeholder="Name"-->
+    <!--ngModel required-->
+    <!--name="headerName" #headerName="ngModel"/>-->
+    <!--</div>-->
     <div class="form-group">
       <label for="image-text">Text</label>
-      <input type="text" class="form-control" id="image-text" placeholder="Text"
-             ngModel required name="text" #text="ngModel">
+      <input type="text" class="form-control" id="image-text" placeholder="text"
+             ngModel required
+             name="text" #text="ngModel"/>
     </div>
     <div class="form-group">
       <label for="image-URL">URL</label>
-      <input type="text" class="form-control" id="image-URL" placeholder="URL"
-             ngModel required name="url" #url="ngModel">
+      <input type="text" class="form-control" id="image-URL" placeholder="url"
+             ngModel required
+             name="url" #url="ngModel"/>
     </div>
     <div class="form-group">
       <label for="image-width">Width</label>
-      <input type="text" class="form-control" id="image-width" value="100%"
-             ngModel required name="width" #width="ngModel">
+      <input type="text" class="form-control" id="image-width" placeholder="width"
+             ngModel required
+             name="width" #width="ngModel"/>
     </div>
     <div class="form-group">
       <label for="exampleInputFile">Upload</label>
-      <input type="file" class="form-control" id="exampleInputFile">
+      <form ngNoForm action="{{baseUrl}}/api/upload" method="post" enctype="multipart/form-data">
+        <input  name="myFile"   type="file" class="form-control"  id="exampleInputFile"/>
+        <input  name="widgetId" value="{{wgid}}"   style="display: none"/>
+        <input  name="websiteId" value="{{websiteId}}"   style="display: none"/>
+        <input  name="pageId" value="{{pageID}}"   style="display: none"/>
+        <input  name="userId" value="{{userId}}"   style="display: none"/>
+        <button type="submit" class="btn btn-block btn-primary">Upload Image</button>
+        <br/>
+      </form>
     </div>
   </form>
-  <button class="btn btn-primary btn-block" type="submit" [disabled]="!f.valid">Upload Image</button>
-  <button class="btn btn-danger btn-block" (click)="deleteWidget()">Delete</button>
+  <!--<button class="btn btn-primary btn-block" type="submit" [disabled]="!f.valid">Upload Image</button>-->
+  <button class="btn btn-danger  btn-block" (click)="delete()">Delete</button>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid row">
     <div class="pull-right navbar-text">
-
-      <a routerLink="/user/{{userId}}" class="cl-icon-padding">
+      <a routerLink="../../../../../.." class="cl-icon-padding">
         <span class="glyphicon glyphicon-user"></span>
       </a>
-
     </div>
   </div>
 </nav>
