--- a/src/app/views/website/website-edit/website-edit.component.html
+++ b/src/app/views/website/website-edit/website-edit.component.html
@@ -5,7 +5,7 @@
       <div class="container-fluid row">
         <div class="col-sm-2 col-xs-12">
           <p class="navbar-text pull-left">
-            <a routerLink="/user/{{developerId}}/website/" class="navbar-link cl-text-white">
+            <a routerLink=".." class="navbar-link cl-text-white">
               <span class="glyphicon glyphicon-chevron-left"></span>
             </a >
           </p >
