--- a/src/app/views/website/website-list/website-list.component.html
+++ b/src/app/views/website/website-list/website-list.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-fixed-top cl-blue-navbar">
   <div class="container-fluid">
     <p class="navbar-text pull-left">
-      <a routerLink="/user/{{userId}}" class="navbar-link cl-text-white">
+      <a routerLink=".." class="navbar-link cl-text-white">
         <span class="glyphicon glyphicon-chevron-left"></span>
       </a>
     </p>
