--- a/src/app/views/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/views/widget/widget-edit/widget-image/widget-image.component.html
@@ -166,19 +166,19 @@
     <!--</div>-->
     <div class="form-group">
       <label for="image-text">Text</label>
-      <input type="text" class="form-control" id="image-text" placeholder="text"
+      <input type="text" class="form-control" id="image-text" placeholder={{widget.text}}
              ngModel required
              name="text" #text="ngModel"/>
     </div>
     <div class="form-group">
       <label for="image-URL">URL</label>
-      <input type="text" class="form-control" id="image-URL" placeholder="url"
+      <input type="text" class="form-control" id="image-URL" placeholder={{widget.url}}
              ngModel required
              name="url" #url="ngModel"/>
     </div>
     <div class="form-group">
       <label for="image-width">Width</label>
-      <input type="text" class="form-control" id="image-width" placeholder="width"
+      <input type="text" class="form-control" id="image-width" placeholder={{widget.width}}
              ngModel required
              name="width" #width="ngModel"/>
     </div>
