--- a/src/app/views/widget/widget-list/widget-list.component.html
+++ b/src/app/views/widget/widget-list/widget-list.component.html
@@ -42,8 +42,9 @@
           <span class="glyphicon glyphicon-cog cl-widget-toolbar-cog"></span>
         </a>
       </div>
-      <h1>HTML: {{widget.text}}</h1>
+      <div [innerHTML]="widget.text"></div>
     </div>
+
     <div *ngIf="widget.widgetType == 'TEXT'">
       <div class="pull-right">
         <a routerLink="/#" class="pull-right">
@@ -55,6 +56,24 @@
       </div>
       <h1>TEXT: {{widget.text}}</h1>
     </div>
+
+    <div *ngSwitchCase="'TEXT'">
+      <a class="pull-right white-background">
+        <span class="glyphicon glyphicon-menu-hamburger"></span>
+      </a>
+      <a routerLink="{{widget._id}}" class="pull-right white-background">
+        <span class="glyphicon glyphicon-cog pull-right"></span>
+      </a>
+      <div *ngIf="widget.formatted">
+        <quill-editor [(ngModel)]="widget.text" name="text"></quill-editor>
+      </div>
+      <input *ngIf="!widget.formatted && (!widget.rows || widget.rows===1)"
+             placeholder="{{widget.placeholder}}" [(ngModel)] = "widget.text"  class="form-control"/>
+      <textarea *ngIf="!widget.formatted && (widget.rows > 1)"
+                rows="{{widget.rows}}" placeholder="{{widget.placeholder}}"
+                class="form-control" [(ngModel)] = "widget.text"></textarea>
+    </div>
+
     <div *ngIf="widget.widgetType == 'IMAGE'">
       <a routerLink="/#" class="pull-right">
         <span class="glyphicon glyphicon-menu-hamburger cl-widget-toolbar-hamburger"></span>
@@ -77,6 +96,7 @@
       </a>
     </div>
   </div>
+    </div>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
