--- a/src/app/views/widget/widget-chooser/widget-chooser.component.html
+++ b/src/app/views/widget/widget-chooser/widget-chooser.component.html
@@ -16,36 +16,36 @@
 
 <div class="container-fluid cl-container-padding">
   <ul class="list-group cl-list-group-borderless">
-    <li class="list-group-item cl-list-item-borderless">
+    <li class="list-group-item cl-list-item-borderless extra-padding">
       <a class="btn" (click)="createWidget('HEADER')">Header</a>
     </li>
-    <li class="list-group-item cl-list-item-borderless">
-      <a routerLink="/#">Label</a>
-    </li>
-    <li class="list-group-item cl-list-item-borderless">
+    <!--<li class="list-group-item cl-list-item-borderless extra-padding">-->
+      <!--<a routerLink="/#">Label</a>-->
+    <!--</li>-->
+    <li class="list-group-item cl-list-item-borderless extra-padding">
       <a class="btn" (click)="createWidget('HTML')">HTML</a>
     </li>
-    <li class="list-group-item cl-list-item-borderless">
+    <li class="list-group-item cl-list-item-borderless extra-padding">
       <a class="btn" (click)="createWidget('TEXT')">Text Input</a>
     </li>
-    <li class="list-group-item cl-list-item-borderless">
-      <a routerLink="/#">Link</a>
-    </li>
-    <li class="list-group-item cl-list-item-borderless">
-      <a routerLink="/#">Button</a>
-    </li>
-    <li class="list-group-item cl-list-item-borderless">
+    <!--<li class="list-group-item cl-list-item-borderless extra-padding">-->
+      <!--<a routerLink="/#">Link</a>-->
+    <!--</li>-->
+    <!--<li class="list-group-item cl-list-item-borderless extra-padding">-->
+      <!--<a routerLink="/#">Button</a>-->
+    <!--</li>-->
+    <li class="list-group-item cl-list-item-borderless extra-padding">
       <a class="btn" (click)="createWidget('IMAGE')">Image</a>
     </li>
-    <li class="list-group-item cl-list-item-borderless">
+    <li class="list-group-item cl-list-item-borderless extra-padding">
       <a class="btn" (click)="createWidget('YOUTUBE')">YouTube</a>
     </li>
-    <li class="list-group-item cl-list-item-borderless">
-      <a routerLink="/#">Data Table</a>
-    </li>
-    <li class="list-group-item cl-list-item-borderless">
-      <a routerLink="/#">Repeater</a>
-    </li>
+    <!--<li class="list-group-item cl-list-item-borderless extra-padding">-->
+      <!--<a routerLink="/#">Data Table</a>-->
+    <!--</li>-->
+    <!--<li class="list-group-item cl-list-item-borderless extra-padding">-->
+      <!--<a routerLink="/#">Repeater</a>-->
+    <!--</li>-->
   </ul>
 </div>
 
@@ -53,7 +53,7 @@
   <div class="container-fluid row">
     <div class="pull-right navbar-text">
 
-      <a routerLink="/user/{{userId}}" class="cl-icon-padding">
+      <a routerLink="../../../../../.." class="cl-icon-padding">
         <span class="glyphicon glyphicon-user"></span>
       </a>
 
