--- a/src/app/views/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/views/widget/widget-edit/widget-image/widget-image.component.html
@@ -195,6 +195,7 @@
       </form>
     </div>
   </form>
+  <a class="btn btn-primary btn-block " [routerLink]="['/user/'+userId+'/website/'+websiteId+'/page/'+pageID+'/widget/'+wgid+'/flickr']">Search Image</a>
   <!--<button class="btn btn-primary btn-block" type="submit" [disabled]="!f.valid">Upload Image</button>-->
   <button class="btn btn-danger  btn-block" (click)="delete()">Delete</button>
 </div>
