--- a/src/app/views/widget/widget-edit/widget-header/widget-header.component.html
+++ b/src/app/views/widget/widget-edit/widget-header/widget-header.component.html
@@ -23,17 +23,17 @@
   <form>
     <div class="form-group">
       <label for="heading-name">Name</label>
-      <input [(ngModel)]="widget.name" type="text" class="form-control" id="heading-name" placeholder="Name"
+      <input [(ngModel)]="widget.name" type="text" class="form-control" id="heading-name" placeholder={{widget.name}}
              [ngModelOptions]="{standalone: true}">
     </div>
     <div class="form-group">
       <label for="heading-text">Text</label>
-      <input [(ngModel)]="widget.text" type="text" class="form-control" id="heading-text" placeholder="Text"
+      <input [(ngModel)]="widget.text" type="text" class="form-control" id="heading-text" placeholder={{widget.text}}
              [ngModelOptions]="{standalone: true}">
     </div>
     <div class="form-group">
       <label for="heading-size">Size</label>
-      <input [(ngModel)]="widget.size" type="text" class="form-control" id="heading-size" value="3"
+      <input [(ngModel)]="widget.size" type="text" class="form-control" id="heading-size" value={{widget.size}}
              [ngModelOptions]="{standalone: true}">
     </div>
   </form>
