--- a/src/app/views/widget/widget-list/widget-list.component.html
+++ b/src/app/views/widget/widget-list/widget-list.component.html
@@ -31,7 +31,15 @@
           <span class="glyphicon glyphicon-cog cl-widget-toolbar-cog"></span>
         </a>
       </div>
-      <h1>HEADER: {{widget.text}}</h1>
+      <div [ngSwitch]="widget.size">
+        <h1  *ngSwitchCase="1">{{widget.text}}</h1>
+        <h2  *ngSwitchCase="2">{{widget.text}}</h2>
+        <h3  *ngSwitchCase="3">{{widget.text}}</h3>
+        <h4  *ngSwitchCase="4">{{widget.text}}</h4>
+        <h5  *ngSwitchCase="5">{{widget.text}}</h5>
+        <h6  *ngSwitchCase="6">{{widget.text}}</h6>
+      </div>
+      <!--<h1>HEADER: {{widget.text}}</h1>-->
     </div>
     <div *ngIf="widget.type == 'HTML'">
       <div class="pull-right">
