--- a/src/app/views/widget/widget-list/widget-list.component.html
+++ b/src/app/views/widget/widget-list/widget-list.component.html
@@ -80,13 +80,29 @@
           </div>
 
           <input *ngIf="!widget.formatted && (!widget.rows || widget.rows===1)"
-                 placeholder="{{widget.placeholder}}" class="form-control"/>
+                 placeholder="{{widget.placeholder}}" [(ngModel)] = "widget.text" class="form-control"/>
 
           <textarea *ngIf="!widget.formatted && (widget.rows > 1)"
                     rows="{{widget.rows}}" placeholder="{{widget.placeholder}}"
-                    class="form-control">{{widget.text}}</textarea>
+                    class="form-control" [(ngModel)] = "widget.text">{{widget.text}}</textarea>
         </div>
 
+    <!--<div *ngIf="widget.type == 'TEXT'">-->
+      <!--<a class="pull-right white-background">-->
+        <!--<span class="glyphicon glyphicon-menu-hamburger"></span>-->
+      <!--</a>-->
+      <!--<a routerLink="{{widget._id}}" class="pull-right white-background">-->
+        <!--<span class="glyphicon glyphicon-cog pull-right"></span>-->
+      <!--</a>-->
+      <!--<div *ngIf="widget.formatted">-->
+        <!--<quill-editor [(ngModel)]="widget.text" name="text"></quill-editor>-->
+      <!--</div>-->
+      <!--<input *ngIf="!widget.formatted && (!widget.rows || widget.rows===1)"-->
+             <!--placeholder="{{widget.placeholder}}" [(ngModel)] = "widget.text"  class="form-control"/>-->
+      <!--<textarea *ngIf="!widget.formatted && (widget.rows > 1)"-->
+                <!--rows="{{widget.rows}}" placeholder="{{widget.placeholder}}"-->
+                <!--class="form-control" [(ngModel)] = "widget.text"></textarea>-->
+    <!--</div>-->
 
 
         <!--<div *ngIf="widget.type == 'TEXT'">-->
