--- a/src/app/views/page/page-edit/page-edit.component.html
+++ b/src/app/views/page/page-edit/page-edit.component.html
@@ -15,7 +15,7 @@
       </a>
     </div>
     <a class="navbar-brand cl-text-white cl-text-bold"
-       routerLink="/user/{{userId}}/website/{{websiteId}}/page/{{pageId}}">Edit Page
+       routerLink="/user/website/{{websiteId}}/page/{{pageId}}">Edit Page
     </a>
   </div>
 </nav>
@@ -39,7 +39,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid row">
     <div class="pull-right navbar-text">
-      <a href="/user/{{userId}}" class="cl-icon-padding">
+      <a href="/profile" class="cl-icon-padding">
         <span class="glyphicon glyphicon-user"></span>
       </a>
     </div>
