--- a/src/app/views/page/page-new/page-new.component.html
+++ b/src/app/views/page/page-new/page-new.component.html
@@ -13,7 +13,7 @@
           </span>
       </a>
     </div>
-    <a class="navbar-brand cl-text-white cl-text-bold" routerLink="/user/{{userId}}/website/{{websiteId}}/page/new">
+    <a class="navbar-brand cl-text-white cl-text-bold" routerLink="/user/website/{{websiteId}}/page/new">
       New Page
     </a>
   </div>
@@ -37,7 +37,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid row">
     <div class="pull-right navbar-text">
-      <a routerLink="/user/{{userId}}" class="cl-icon-padding">
+      <a routerLink="/profile" class="cl-icon-padding">
         <span class="glyphicon glyphicon-user"></span>
       </a>
     </div>
