--- a/src/app/views/user/login/login.component.html
+++ b/src/app/views/user/login/login.component.html
@@ -27,6 +27,9 @@
       <a routerLink="/register" class="btn btn-success btn-block">Register</a>
     </div>
 
+    <a href="{{baseUrl}}/facebook/login" class="btn btn-primary btn-block" type="button" >
+      <span class="fa fa-facebook"></span>Facebook</a>
+
     <!--{{f.valid}}-->
     <!--<div>  this line means except for disabled, the form is always valid.-->
     <!--</div>>-->
