--- a/src/app/views/user/profile/profile.component.html
+++ b/src/app/views/user/profile/profile.component.html
@@ -40,10 +40,10 @@
   </span>
 
   <a class="btn btn-primary btn-block"
-     routerLink="/user/{{user._id}}/website">Websites</a>
+     routerLink="/user/website">Websites</a>
   <a class="btn btn-danger  btn-block"
      routerLink="/login">Logout</a>
-
+  <button (click)="deleteUser()" class="btn btn-danger btn-block" type="button">Delete</button>
   <nav class="navbar navbar-fixed-bottom cl-blue-navbar">
     <div class="container-fuild">
       <a routerLink="/user/{{user._id}}" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
