--- a/src/app/views/widget/widget-list/widget-list.component.html
+++ b/src/app/views/widget/widget-list/widget-list.component.html
@@ -153,10 +153,10 @@
     </div>
 
     <div class="pull-left navbar-text">
-      <a routerLink="/#" class="cl-icon-padding">
+      <a routerLink="/profile" class="cl-icon-padding">
         <span class="glyphicon glyphicon-play cl-widget-gly-color"></span>
       </a>
-      <a routerLink="/#" class="cl-icon-padding">
+      <a routerLink="/profile" class="cl-icon-padding">
         <span class="glyphicon glyphicon-eye-open cl-widget-gly-color"></span>
       </a>
 
