--- a/src/app/views/website/website-edit/website-edit.component.html
+++ b/src/app/views/website/website-edit/website-edit.component.html
@@ -11,10 +11,10 @@
           </p >
         </div>
         <div class="col-xs-10 hidden-xs">
-          <a class="cl-text-white navbar-brand cl-text-bold cl-icon-padding" routerLink="/user/{{developerId}}/website">
+          <a class="cl-text-white navbar-brand cl-text-bold cl-icon-padding" routerLink="/user/website">
             Websites
           </a >
-          <a routerLink="/user/{{developerId}}/website/new" class="navbar-link navbar-text pull-right cl-text-white">
+          <a routerLink="/user/website/new" class="navbar-link navbar-text pull-right cl-text-white">
             <span class="glyphicon glyphicon-plus"></span>
           </a >
         </div>
@@ -22,7 +22,7 @@
     </div>
     <div class="col-xs-11 col-sm-8">
       <div class="container-fluid">
-        <a class="cl-text-white navbar-brand cl-text-bold" routerLink="/user/{{developerId}}/website/{{websiteId}}">
+        <a class="cl-text-white navbar-brand cl-text-bold" routerLink="/user/website/{{websiteId}}">
           Edit Website
         </a>
         <a (click)="updateWebsite(updatedWebsite)" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
@@ -37,8 +37,8 @@
   <div class="col-xs-4 hidden-xs">
     <ul class="list-group cl-list-group-borderless" *ngFor="let website of websites">
       <li class="list-group-item cl-list-item-borderless">
-        <a routerLink="/user/{{developerId}}/website/{{website._id}}/page">{{website.name}}</a>
-        <a routerLink="/user/{{developerId}}/website/{{website._id}}">
+        <a routerLink="/user/website/{{website._id}}/page">{{website.name}}</a>
+        <a routerLink="/user/website/{{website._id}}">
           <span class="glyphicon glyphicon-cog pull-right"></span>
         </a>
       </li>
@@ -57,14 +57,14 @@
                   placeholder="Website Description" [ngModelOptions]="{standalone: true}"></textarea>
       </div>
       <a (click)="deleteWebsite()" class="btn btn-danger btn-block cl-8-top"
-         routerLink="/user/{{developerId}}/website">Delete</a>
+         routerLink="/user/website">Delete</a>
     </form>
   </div>
 </div>
 
 <nav class="navbar navbar-fixed-bottom cl-blue-navbar">
   <div class="container-fuild">
-    <a routerLink="/user/{{developerId}}" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+    <a routerLink="/profile" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
       <span class="glyphicon glyphicon-user"></span>
     </a>
   </div>
