--- a/src/app/views/website/website-list/website-list.component.html
+++ b/src/app/views/website/website-list/website-list.component.html
@@ -6,10 +6,10 @@
         <span class="glyphicon glyphicon-chevron-left"></span>
       </a>
     </p>
-    <a class="cl-text-white navbar-brand cl-text-bold" routerLink="/user/{{userId}}/website">
+    <a class="cl-text-white navbar-brand cl-text-bold" routerLink="/user/website">
       Websites
     </a>
-    <a routerLink="/user/{{userId}}/website/new" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+    <a routerLink="/user/website/new" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
       <span class="glyphicon glyphicon-plus"></span>
     </a>
   </div>
@@ -18,9 +18,9 @@
 <div class="container-fluid">
   <ul class="list-group cl-list-group-borderless" *ngFor="let website of websites">
     <li class="list-group-item cl-list-item-borderless">
-      <a routerLink="/user/{{userId}}/website/{{website._id}}/page">{{website.name}}
+      <a routerLink="/user/website/{{website._id}}/page">{{website.name}}
       </a>
-      <a routerLink="/user/{{userId}}/website/{{website._id}}">
+      <a routerLink="/user/website/{{website._id}}">
         <span class="glyphicon glyphicon-cog pull-right"></span>
       </a>
     </li>
@@ -30,7 +30,7 @@
 
 <nav class="navbar navbar-fixed-bottom cl-blue-navbar">
   <div class="container-fuild">
-    <a routerLink="/user/{{userId}}" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+    <a routerLink="/profile" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
       <span class="glyphicon glyphicon-user"></span>
     </a>
   </div>
