--- a/src/app/views/website/website-new/website-new.component.html
+++ b/src/app/views/website/website-new/website-new.component.html
@@ -10,10 +10,10 @@
           </p >
         </div>
         <div class="col-xs-10 hidden-xs">
-          <a class="cl-text-white navbar-brand cl-text-bold cl-icon-padding" routerLink="/user/{{developerId}}/website/new">
+          <a class="cl-text-white navbar-brand cl-text-bold cl-icon-padding" routerLink="/user/website/new">
             Websites
           </a >
-          <a routerLink="/user/{{developerId}}/website/new" class="navbar-link navbar-text pull-right cl-text-white">
+          <a routerLink="/user/website/new" class="navbar-link navbar-text pull-right cl-text-white">
             <span class="glyphicon glyphicon-plus"></span>
           </a>
         </div>
@@ -21,7 +21,7 @@
     </div>
     <div class="col-xs-11 col-sm-8">
       <div class="container-fluid">
-        <a class="cl-text-white navbar-brand cl-text-bold" routerLink="/user/{{developerId}}/website/new">
+        <a class="cl-text-white navbar-brand cl-text-bold" routerLink="/user/website/new">
           New Website
         </a>
         <a (click)="createWebsite(newWebsite)" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
@@ -37,8 +37,8 @@
   <div class="col-xs-4 hidden-xs">
     <ul class="list-group cl-list-group-borderless" *ngFor="let website of websites">
       <li class="list-group-item cl-list-item-borderless">
-        <a class="cl-left-padding" routerLink="/user/{{developerId}}/website/{{website._id}}/page">{{website.name}}</a>
-        <a class="pull-right" routerLink="/user/{{developerId}}/website/{{website._id}}">
+        <a class="cl-left-padding" routerLink="/user/website/{{website._id}}/page">{{website.name}}</a>
+        <a class="pull-right" routerLink="/user/website/{{website._id}}">
           <i class="glyphicon glyphicon-cog text-primary"></i>
         </a>
       </li>
@@ -62,7 +62,7 @@
 
 <nav class="navbar navbar-fixed-bottom cl-blue-navbar">
   <div class="container-fuild">
-    <a routerLink="/user/{{developerId}}" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+    <a routerLink="/profile" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
       <span class="glyphicon glyphicon-user"></span>
     </a>
   </div>
