--- a/src/app/views/widget/widget-edit/widget-image/flickr-image-search/flickr-image-search.component.html
+++ b/src/app/views/widget/widget-edit/widget-image/flickr-image-search/flickr-image-search.component.html
@@ -42,7 +42,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
     <p class="navbar-text pull-right">
-      <a routerLink="/user/{{userId}}">
+      <a routerLink="/profile">
         <span class="glyphicon glyphicon-user"></span>
       </a>
     </p>
